--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
             color: #fff;
             width: 100%;
             height: 500px;
-            margin: 50px auto;
+            position: absolute;
+            left: 50%;
+            top: 40%;
+            transform: translate(-50%, -40%);
             text-align: center;
         }
         
